kube-2023-06-14-demo/ingress.networking.k8s.io/acmid-web-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    haproxy.org/ssl-redirect: "true"
    kubernetes.io/ingress.class: haproxy
  creationTimestamp: "2023-02-27T06:56:38Z"
  generation: 3
  name: acmid-web-ingress
  namespace: acm-production
  resourceVersion: "30907094"
  uid: f15adec7-5fdf-44bf-b9f9-ce62fc6c2a95
spec:
  rules:
  - host: id.awing.com.vn
    http:
      paths:
      - backend:
          service:
            name: acmid-web-svc
            port:
              number: 80
        path: /
        pathType: Prefix
  - host: id.awing.com.vn
    http:
      paths:
      - backend:
          service:
            name: acmid-api-svc
            port:
              number: 80
        path: /api/
        pathType: Prefix
  tls:
  - hosts:
    - id.awing.com.vn
    secretName: awingcomtls
status:
  loadBalancer:
    ingress:
    - ip: 172.16.1.32
