kube-2023-06-14-demo/ingress.networking.k8s.io/connect-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    haproxy-ingress.github.io/ssl-redirect: "false"
    ingress.kubernetes.io/affinity: cookie
    kubernetes.io/ingress.class: haproxy
  creationTimestamp: "2023-02-27T06:56:39Z"
  generation: 3
  name: connect-ingress
  namespace: acm-production
  resourceVersion: "30907095"
  uid: 5a7b0182-87fe-4a49-949d-fc047174f86b
spec:
  rules:
  - host: connect.awing.com.vn
    http:
      paths:
      - backend:
          service:
            name: acmcaptive-web-svc
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - connect.awing.com.vn
    secretName: awingcomtls
status:
  loadBalancer:
    ingress:
    - ip: 172.16.1.32
