kube-2023-06-14-demo/ingress.networking.k8s.io/connect-v2-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    haproxy-ingress.github.io/ssl-redirect: "true"
    haproxy.org/cookie-persistence: ingresscookie
    haproxy.org/forwarded-for: "true"
    kubectl.kubernetes.io/last-applied-configuration: |
    kubernetes.io/ingress.class: haproxy
  creationTimestamp: "2023-02-27T06:56:39Z"
  generation: 3
  name: connect-v2-ingress
  namespace: acm-production
  resourceVersion: "30907092"
  uid: 81865895-a411-4304-ba20-c3b9b742a19f
spec:
  rules:
  - host: connect-v2.awing.com.vn
    http:
      paths:
      - backend:
          service:
            name: acmcaptive-v2-web-svc
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - connect-v2.awing.com.vn
    secretName: awingcomtls
status:
  loadBalancer:
    ingress:
    - ip: 172.16.1.32
